--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/AlexxFoexx/Easy-Layout#readme",
   "devDependencies": {
-    "bower": "^1.8.4",
     "browser-sync": "^2.24.4",
+    "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-cleancss": "^0.2.2",
@@ -26,10 +26,16 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
+    "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-stylus": "^2.7.0",
     "gulp-uglify": "^3.0.0",
+    "nib": "^1.1.2",
+    "node-notifier": "^5.2.1",
+    "notifier": "^0.1.7",
+    "rupture": "^0.7.1",
     "yargs": "^11.0.0"
   }
 }
