--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "node-notifier": "^5.2.1",
     "notifier": "^0.1.7",
     "rupture": "^0.7.1",
-    "yargs": "^11.0.0"
+    "yargs": "^12.0.1"
+  },
+  "dependencies": {
+    "npm-check-updates": "^2.14.2"
   }
 }
